# svelte-rs-2

./: .gitattributes  .gitignore  .mcp.json  .narsil.yaml  .npmrc  AGENTS.md  ANALYZE_MATURITY_PLAN.PROGRESS.md  ANALYZE_MATURITY_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  AUDIT.md  AUDIT_BOUNDARIES.md  BOUNDARY_REVIEW.md  CLAUDE.md  CODEBASE_MAP.md  COMPONENT_SEMANTICS_TASK.md  Cargo.toml  DATA_CODEGEN_SIMPLIFY.md  GOTCHAS.md  KILL_FRAGMENT_ITEM.md  MIGRATION_OXC_VISIT.md  NAPI_CANARY_PLAN.md  PARITY.md  PLAN.md  PROGRESS.md  REACTIVITY_ARCHITECTURE.md  README.md  REFACTORING_PLAN.md  REVIEW.md  ROADMAP.md  SEMANTIC_LAYER_ARCHITECTURE.md  SIMPLIFY_EXECUTION_PLAN.md  SIMPLIFY_REVIEW.md  TODO.md  TODO_ANALYZE.md  cclsp.json  context.md  debt.md  features.md  justfile  (+5 more)
crates/analyze_hir/: Cargo.toml
crates/analyze_hir/src/: analises.rs  analyze_expression.rs  analyze_script.rs  bitflags.rs  indentifier_gen.rs  lib.rs  rune_reference.rs  scope_adding.rs
crates/analyzer/: Cargo.toml
crates/analyzer/src/: ancestor.rs  compute_optimization.rs  lib.rs  svelte_table.rs  visitor.rs  visitor2.rs
crates/analyzer/src/context/: ancestry.rs  element_flags.rs  mod.rs
crates/ast/: Cargo.toml
crates/ast/src/: attribute.rs  format.rs  lib.rs  metadata.rs  node_id.rs
crates/ast_to_hir/: Cargo.toml
crates/ast_to_hir/src/: compress_nodes.rs  context.rs  lib.rs  trim_nodes.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/napi_compiler/: Cargo.toml
crates/napi_compiler/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/parser/src/scanner/: mod.rs  token.rs
crates/svelte_analyze/: Cargo.toml
crates/svelte_analyze/src/: analyze_semantic.rs  bind_semantics.rs  ce_config.rs  content_types.rs  css.rs  data.rs  element_flags.rs  elseif.rs  hoistable.rs  ident_gen.rs  js_analyze.rs  known_values.rs  lib.rs  lower.rs  markers.rs  mutations.rs  needs_var.rs  node_table.rs  parse_js.rs  post_resolve.rs  props.rs  reactivity.rs  resolve_references.rs  runes.rs  scope.rs  script_info.rs  script_types.rs  store_subscriptions.rs  symbols.rs  tests.rs  validate.rs  walker.rs
crates/svelte_analyze/src/block_semantics/: data.rs  mod.rs
crates/svelte_analyze/src/passes/: bind_semantics.rs  binding_properties.rs  build_component_semantics.rs  bundles.rs  collect_symbols.rs  const_tag_fragments.rs  content_types.rs  css_analyze.rs  css_prune.rs  css_prune_index.rs  dynamism.rs  element_flags.rs  executor.rs  finalize_component_name.rs  fragment_topology.rs  hoistable.rs  html_tag_ns_flags.rs  js_analyze.rs  js_metadata.rs  lower.rs  mark_runes.rs  mod.rs  populate_const_tag_syms.rs  post_resolve.rs  reactivity.rs  resolve_references.rs  resolve_render_tag_meta.rs  template_scoping.rs  template_semantic.rs  template_side_tables.rs  template_validation.rs
crates/svelte_analyze/src/reactivity_semantics/: data.rs  legacy_reactive.rs  mod.rs
crates/svelte_analyze/src/tests/: a11y.rs
crates/svelte_analyze/src/types/: data.rs  markers.rs  mod.rs  node_table.rs  script.rs
crates/svelte_analyze/src/utils/: attributes.rs  binding_pattern.rs  ce_config.rs  events.rs  html_tree_validation.rs  ident_gen.rs  legacy_slot.rs  mod.rs  property_key.rs  script_info.rs  simple_expression.rs  var_decl_kind.rs
crates/svelte_analyze/src/validate/: experimental_async.rs  legacy.rs  mod.rs  non_reactive_update.rs  runes.rs  stores.rs
crates/svelte_analyze/src/walker/: context.rs  dispatch.rs  mod.rs  traverse.rs  visitor.rs
crates/svelte_ast_builder/: Cargo.toml
crates/svelte_ast_builder/src/builder/: base.rs  calls.rs  functions.rs  mod.rs  modules.rs  objects.rs  statements.rs  svelte_patterns.rs
crates/svelte_codegen_client/: Cargo.toml
crates/svelte_codegen_client/src/: builder.rs  context.rs  custom_element.rs  lib.rs  rune_transform.rs  script.rs  template.rs
crates/svelte_codegen_client/src/builder/: base.rs  calls.rs  classes.rs  functions.rs  members.rs  mod.rs  modules.rs  objects.rs  statements.rs  templates.rs
crates/svelte_codegen_client/src/codegen/: anchor.rs  async_plan.rs  dev.rs  effect.rs  expr.rs  let_directive_legacy.rs  mod.rs  namespace.rs
crates/svelte_codegen_client/src/script/: location.rs  mod.rs  model.rs  pipeline.rs  props.rs  state.rs  traverse.rs
crates/svelte_codegen_client/src/template/: async_plan.rs  attributes.rs  await_block.rs  bind.rs  component.rs  const_tag.rs  debug_tag.rs  each_block.rs  element.rs  events.rs  expression.rs  (+20 more)
crates/svelte_compiler/: Cargo.toml
crates/svelte_compiler/src/: lib.rs  options.rs  tests.rs
crates/svelte_component_semantics/: Cargo.toml
crates/svelte_component_semantics/src/: lib.rs  pattern.rs  reference.rs  scope.rs  storage.rs  symbol.rs
crates/svelte_css/: Cargo.toml
crates/svelte_css/src/: ast.rs  lib.rs  parser.rs  printer.rs  scanner.rs  test.rs  visit.rs
crates/svelte_parser/: Cargo.toml
crates/svelte_parser/examples/: dump_ast.rs
crates/svelte_parser/src/: attr_convert.rs  handlers.rs  html.rs  html_entities.rs  js_parse.rs  lib.rs  parse_js.rs  script_info.rs  svelte_elements.rs  tests.rs  types.rs  walk_js.rs
crates/svelte_transform/: Cargo.toml
crates/svelte_transform/src/: data.rs  lib.rs  rune_refs.rs
crates/transform_hir/: Cargo.toml
crates/transform_hir/src/: context.rs  lib.rs
crates/transformer/: Cargo.toml
crates/transformer/src/: builder.rs  lib.rs  scope.rs  transform_script.rs  transform_template.rs
crates/wasm_compiler/: Cargo.toml
crates/wasm_compiler/src/: lib.rs
tasks/benchmark/: Cargo.toml  bench.mjs  compare.mjs  package-lock.json  package.json
tasks/benchmark/benches/: svelte_compile_module.rs  svelte_compile_module_dev.rs  svelte_compiler.rs  svelte_compiler_dev.rs
tasks/benchmark/scripts/: gecko-to-folded.mjs
tasks/benchmark/src/: bench_cli.rs  lib.rs
tasks/compiler_tests/: Cargo.toml  generate.ts  test.rs  test_hir.rs  test_v3.rs
tasks/compiler_tests/src/: main.rs
tasks/diagnostic_tests/: Cargo.toml  test_diagnostics.rs
tasks/quick_check/: Cargo.toml
tasks/quick_check/src/: main.rs
(+3120 files in other folders)
