[workspace]
members = ["crates/*", "tasks/*"]
resolver = "2"


[workspace.dependencies]
svelte_span = { path = "crates/svelte_span" }
svelte_ast = { path = "crates/svelte_ast" }
svelte_parser = { path = "crates/svelte_parser" }
svelte_diagnostics = { path = "crates/svelte_diagnostics" }
svelte_analyze = { path = "crates/svelte_analyze" }
svelte_codegen_client = { path = "crates/svelte_codegen_client" }
svelte_transform = { path = "crates/svelte_transform" }
svelte_compiler = { path = "crates/svelte_compiler" }
svelte_component_semantics = { path = "crates/svelte_component_semantics" }
svelte_transform_css = { path = "crates/svelte_transform_css" }
svelte_css = { path = "crates/svelte_css" }

compact_str = "0.9.0"
glob = "0.3.2"
oxc_allocator = "0.117.0"
oxc_ast = "0.117.0"
oxc_ast_visit = "0.117.0"
oxc_codegen = "0.117.0"
oxc_index = "2.0.0"
oxc_parser = "0.117.0"
oxc_semantic = "0.117.0"
oxc_syntax = "0.117.0"
oxc_span = "0.117.0"
oxc_transformer = "0.117.0"
oxc_traverse = "0.117.0"
pretty_assertions = "1.4.1"
criterion2 = { version = "2.0.0" }
rstest = "0.24.0"
wasm-bindgen = "0.2.99"
serde-wasm-bindgen = "0.6.5"
rustc-hash = "2.1.1"
smallvec = "1"
bitflags = "2.6.0"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
