[package]
name = "analyze_hir"
version = "0.1.0"
edition = "2024"

[dependencies]
hir = { workspace = true }
oxc_semantic = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
bitflags = { workspace = true }

[dev-dependencies]
parser = { workspace = true }
ast_to_hir = { workspace = true }
