[package]
name = "compiler"
version = "0.1.0"
edition = "2021"


[lib]
doctest = false

[dependencies]
analyzer = { workspace = true }
diagnostics = { workspace = true }
parser = { workspace = true }
transformer = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
