[package]
name = "napi_compiler"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.16", default-features = false, features = ["napi8"] }
napi-derive = "2.16.13"
svelte_compiler = { workspace = true }
svelte_diagnostics = { workspace = true }

[build-dependencies]
napi-build = "2.1.4"
