[package]
name = "svelte_analyze"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
svelte_ast = { path = "../svelte_ast" }
svelte_component_semantics = { path = "../svelte_component_semantics" }
svelte_parser = { path = "../svelte_parser" }
svelte_diagnostics = { path = "../svelte_diagnostics" }
svelte_span = { path = "../svelte_span" }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_parser = { workspace = true }
oxc_semantic = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }
compact_str = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
bitflags = { workspace = true }
svelte_css = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
