[package]
name = "svelte_codegen_client"
version = "0.1.0"
edition = "2021"

[dependencies]
svelte_ast = { workspace = true }
svelte_analyze = { workspace = true }
svelte_transform = { workspace = true }
svelte_parser = { workspace = true }
svelte_span = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_codegen = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }
oxc_semantic = { workspace = true }
oxc_traverse = { workspace = true }
rustc-hash = { workspace = true }
