[package]
name = "svelte_compiler"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
svelte_ast = { workspace = true }
svelte_parser = { workspace = true }
svelte_analyze = { workspace = true }
svelte_transform = { workspace = true }
svelte_diagnostics = { workspace = true }
svelte_codegen_client = { path = "../svelte_codegen_client" }
svelte_transform_css = { workspace = true }
oxc_allocator = { workspace = true }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
