[package]
name = "svelte_css"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
svelte_span = { workspace = true }
svelte_diagnostics = { workspace = true }
smallvec = { workspace = true }
compact_str = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
