[package]
name = "svelte_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
svelte_span = { path = "../svelte_span" }
svelte_ast = { path = "../svelte_ast" }
svelte_diagnostics = { path = "../svelte_diagnostics" }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }
compact_str = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
