[package]
name = "svelte_parser"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
svelte_span = { path = "../svelte_span" }
svelte_ast = { path = "../svelte_ast" }
svelte_diagnostics = { path = "../svelte_diagnostics" }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_parser = { workspace = true }
oxc_semantic = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }
compact_str = { workspace = true }
rustc-hash = { workspace = true }
lightningcss = { version = "1.0.0-alpha.71", features = ["visitor"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
oxc_ast = { workspace = true, features = ["serialize"] }
oxc_estree = { version = "0.117.0", features = ["serialize"] }
