[package]
name = "svelte_transform"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_syntax = { workspace = true }
svelte_analyze = { workspace = true }
svelte_ast = { workspace = true }
svelte_parser = { workspace = true }
svelte_span = { workspace = true }
rustc-hash = { workspace = true }
