[package]
name = "wasm_compiler"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies]
svelte_compiler = { workspace = true }
lightningcss = { version = "1.0.0-alpha.71", features = ["visitor"] }
svelte_diagnostics = { workspace = true }
oxc_allocator = { workspace = true }
oxc_codegen = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
