[package]
name = "wasm_compiler"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
doctest = false
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dependencies]
svelte_compiler = { workspace = true }
svelte_css = { workspace = true }
svelte_diagnostics = { workspace = true }
oxc_allocator = { workspace = true }
oxc_codegen = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
