[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true


[lib]
test = false
# bench = false
doctest = false

[[bench]]
name = "svelte_compiler"
harness = false

[[bin]]
name = "bench_cli"
path = "src/bench_cli.rs"

[dependencies]
svelte_compiler = { workspace = true }
criterion2 = { workspace = true, features = ["codspeed"] }
glob = { workspace = true }
