[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true


[lib]
test = false
# bench = false
doctest = false

[[bench]]
name = "svelte_compiler"
harness = false

[[bench]]
name = "svelte_compiler_dev"
harness = false

[[bench]]
name = "svelte_compile_module"
harness = false

[[bench]]
name = "svelte_compile_module_dev"
harness = false

[features]
default = []
codspeed = ["criterion2/codspeed"]

[dependencies]
svelte_compiler = { workspace = true }
criterion2 = { workspace = true }
glob = { workspace = true }
