[package]
name = "compiler_tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "compiler_tests"
path = "test.rs"

[[test]]
name = "compiler_tests_hir"
path = "test_hir.rs"

[dependencies]
rstest = { workspace = true }
oxc_allocator = { workspace = true }
pretty_assertions = { workspace = true }
compiler = { workspace = true }
