[package]
name = "compiler_tests"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
doctest = false

[[test]]
name = "compiler_tests_v3"
path = "test_v3.rs"

[dependencies]

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }
svelte_compiler = { workspace = true }
serde_json = "1"
