[package]
name = "diagnostic_tests"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[[test]]
name = "diagnostic_tests"
path = "test_diagnostics.rs"

[dependencies]

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
svelte_compiler = { workspace = true }
svelte_diagnostics = { workspace = true }
